--- a/index.html
+++ b/index.html
@@ -3,15 +3,29 @@
   <head>
     <meta charset="utf-8">
     <title>Atti's Personal Site</title>
+    <style>
+      body {
+        background-color: #a3ddcb;
+      }
+      hr {
+        background-color: snow;
+        border-style: none;
+        height: 2px;
+      }
+      img {
+        height: 200px;
+      }
+
+    </style>
+
   </head>
   <body>
     <table cellspacing = "20">
-      <tr>
-        <td>  <img src="/Users/attimanne/Documents/Web Development/HTML - Personal Site/IMG-20200812-WA0008.jpg">  </td>
-        <td>   <h1> Atti Manne  </h1></td>
-        <td></td>
-      </tr>
-        <td> <p> <em>Service Delivery Manager at <strong>MDM Maleka Group</strong> </em>  </p>  </td>
+        <tr>
+          <td> <img src="/Users/attimanne/Documents/Web Development/HTML - Personal Site/IMG-20200812-WA0008.jpg" alt="Atti Manne's Profile pic"></td>
+          <td> <h1> <em> <b> Atti Manne</b> </em> </h1>
+          <p> <em>Service Delivery Manager at MD Maleka Goup</em> </p> </td>
+        </tr>
     </table>
     <hr>
     <h3>Education</h3>
