Changed the img src

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <table cellspacing = "20">
         <tr>
-          <td> <img src="/Users/attimanne/Documents/Web Development/HTML - Personal Site/IMG-20200812-WA0008.jpg" alt="Atti Manne's Profile pic"></td>
+          <td> <img src="IMG-20200812-WA0008.jpg" alt="Atti Manne's Profile pic"></td>
           <td> <h1> <em> <b> Atti Manne</b> </em> </h1>
           <p> <em>Service Delivery Manager at MD Maleka Goup</em> </p> </td>
         </tr>
